added a sentence about what the software actually can do

--- a/README
+++ b/README
@@ -14,6 +14,8 @@ work right now:
 * the test cases
 * reading chunks with some specific stuff in it :-)
 
+But you can do some world exports from minecraft savegames to povray scenes.
+
 ---------------------------------------------------------------------
 Installation
 
