updates my email address

--- a/README
+++ b/README
@@ -60,4 +60,4 @@ The gallery is sorted by age. Send me your links so I can extend the gallery!
 ---------------------------------------------------------------------
 Contact
 
-* author: Markus Pielmeier <markus.pielmeier@googlemail.com>
+* author: Markus Peröbner <markus.peroebner@gmail.com>
